[gd_scene load_steps=23 format=3 uid="uid://cd6dhh668lla3"]

[ext_resource type="Script" path="res://systems/stats/performance_chart/performance_chart.gd" id="1_c4kng"]
[ext_resource type="Script" path="res://universal_scripts/Control.gd" id="2_8rbf3"]
[ext_resource type="Theme" uid="uid://bywvvpuodhlu0" path="res://assets/themes/universal_theme.tres" id="3_7y7tp"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/Game_Description.gd" id="4_fka6b"]
[ext_resource type="FontFile" uid="uid://cubu4cwt23fk0" path="res://assets/fonts/MinecraftRegular-Bmg3.otf" id="5_uc7mg"]
[ext_resource type="FontFile" uid="uid://cqhjm2fdma250" path="res://assets/fonts/MinecraftBold-nMK1.otf" id="6_skg6n"]
[ext_resource type="FontFile" uid="uid://bjqtxj2hjlg82" path="res://assets/fonts/MinecraftItalic-R8Mo.otf" id="7_1jh43"]
[ext_resource type="FontFile" uid="uid://jsenqrxfhpga" path="res://assets/fonts/MinecraftBoldItalic-1y1e.otf" id="8_44pqn"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/Difficulty_Number.gd" id="9_itxlr"]
[ext_resource type="Texture2D" uid="uid://qfhesm8otkv" path="res://assets/improvement_chart/all_icon.png" id="10_c251e"]
[ext_resource type="Theme" uid="uid://dacebaabmadq" path="res://assets/themes/texture_theme.tres" id="11_j0xy2"]
[ext_resource type="Texture2D" uid="uid://pv7uygs23pg0" path="res://assets/improvement_chart/visible_icon.png" id="12_qbj07"]
[ext_resource type="Texture2D" uid="uid://cwfpgvecgmp1r" path="res://assets/improvement_chart/normal_icon.png" id="13_kmv1q"]
[ext_resource type="Texture2D" uid="uid://dyouqupibm1yx" path="res://assets/improvement_chart/hard_icon.png" id="14_8jaac"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/up_drawer.gd" id="15_s3m1s"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/right_drawer2.gd" id="16_a557n"]
[ext_resource type="Texture2D" uid="uid://s871uxno6uty" path="res://icon.svg" id="17_8v1gl"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/change_scene/clickable_change_scene.tscn" id="18_t36mh"]
[ext_resource type="Texture2D" uid="uid://cnltgiwq825d2" path="res://assets/universal/back_icon.png" id="19_etagl"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/Interpretation.gd" id="20_1xhs7"]
[ext_resource type="Script" path="res://systems/stats/performance_chart/drawer2.gd" id="21_pw1bn"]
[ext_resource type="PackedScene" uid="uid://4ne55yncfru3" path="res://systems/transition_layer/transition_layer.tscn" id="22_demm4"]

[node name="ImprovementChart" type="Node2D"]
script = ExtResource("1_c4kng")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
size_flags_horizontal = 4
script = ExtResource("2_8rbf3")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.4, 0.894118, 1)

[node name="Games" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.665
anchor_top = 0.09
anchor_right = 0.665
anchor_bottom = 0.09
offset_left = -17.1
offset_top = -86.4
offset_right = 180.9
offset_bottom = -46.4
grow_horizontal = 0
metadata/_edit_group_ = true

[node name="SodaTiles" type="Button" parent="Control/Games"]
layout_mode = 2
theme = ExtResource("3_7y7tp")
toggle_mode = true
text = "Soda Tiles"

[node name="Digit Hack" type="Button" parent="Control/Games"]
layout_mode = 2
theme = ExtResource("3_7y7tp")
toggle_mode = true
text = "Digit Hack
"

[node name="Meteor Rush" type="Button" parent="Control/Games"]
layout_mode = 2
theme = ExtResource("3_7y7tp")
toggle_mode = true
text = "Meteor Rush"

[node name="Game_Description" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.391
anchor_top = 0.13
anchor_right = 0.97
anchor_bottom = 0.277
offset_left = -0.140015
offset_top = -63.8
offset_right = 0.200012
offset_bottom = -76.92
script = ExtResource("4_fka6b")
metadata/_edit_group_ = true

[node name="Label" type="RichTextLabel" parent="Control/Game_Description"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 7.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_uc7mg")
theme_override_fonts/bold_font = ExtResource("6_skg6n")
theme_override_fonts/italics_font = ExtResource("7_1jh43")
theme_override_fonts/bold_italics_font = ExtResource("8_44pqn")
theme_override_font_sizes/normal_font_size = 15
text = "..."

[node name="Difficulty_Info" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.223
anchor_top = 0.13
anchor_right = 0.223
anchor_bottom = 0.13
offset_left = -163.42
offset_top = 0.199989
offset_right = 72.58
offset_bottom = 108.2

[node name="Difficulty_Number" type="VBoxContainer" parent="Control/Difficulty_Info"]
layout_mode = 2
theme = ExtResource("3_7y7tp")
script = ExtResource("9_itxlr")

[node name="AllCount" type="Label" parent="Control/Difficulty_Info/Difficulty_Number"]
self_modulate = Color(0.286275, 0.886275, 0.117647, 1)
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="NormalCount" type="Label" parent="Control/Difficulty_Info/Difficulty_Number"]
self_modulate = Color(1, 0.694118, 0.34902, 1)
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HardCount" type="Label" parent="Control/Difficulty_Info/Difficulty_Number"]
self_modulate = Color(0.811765, 0.156863, 0.156863, 1)
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Difficulty_Filter" type="VBoxContainer" parent="Control/Difficulty_Info"]
layout_mode = 2
theme = ExtResource("3_7y7tp")

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Difficulty_Info/Difficulty_Filter"]
layout_mode = 2

[node name="AllContainer" type="HBoxContainer" parent="Control/Difficulty_Info/Difficulty_Filter"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Difficulty_Info/Difficulty_Filter/AllContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("10_c251e")
expand_mode = 1

[node name="All_Label" type="Label" parent="Control/Difficulty_Info/Difficulty_Filter/AllContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "All
"

[node name="All_Visible" type="Button" parent="Control/Difficulty_Info/Difficulty_Filter/AllContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("11_j0xy2")

[node name="Visible_Icon1" type="Sprite2D" parent="Control/Difficulty_Info/Difficulty_Filter/AllContainer/All_Visible"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("12_qbj07")
hframes = 2

[node name="NormalContainer" type="HBoxContainer" parent="Control/Difficulty_Info/Difficulty_Filter"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Difficulty_Info/Difficulty_Filter/NormalContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("13_kmv1q")
expand_mode = 1

[node name="Normal_Label" type="Label" parent="Control/Difficulty_Info/Difficulty_Filter/NormalContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Normal
"

[node name="Normal_Visible" type="Button" parent="Control/Difficulty_Info/Difficulty_Filter/NormalContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("11_j0xy2")

[node name="Visible_Icon2" type="Sprite2D" parent="Control/Difficulty_Info/Difficulty_Filter/NormalContainer/Normal_Visible"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("12_qbj07")
hframes = 2
frame = 1

[node name="HardContainer" type="HBoxContainer" parent="Control/Difficulty_Info/Difficulty_Filter"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Difficulty_Info/Difficulty_Filter/HardContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("14_8jaac")
expand_mode = 1

[node name="Hard_Label" type="Label" parent="Control/Difficulty_Info/Difficulty_Filter/HardContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Hard
"

[node name="Hard_Visible" type="Button" parent="Control/Difficulty_Info/Difficulty_Filter/HardContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme = ExtResource("11_j0xy2")

[node name="Visible_Icon3" type="Sprite2D" parent="Control/Difficulty_Info/Difficulty_Filter/HardContainer/Hard_Visible"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("12_qbj07")
hframes = 2
frame = 1

[node name="Stats_Chart" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.463
anchor_top = 0.5
anchor_right = 0.463
anchor_bottom = 0.5
offset_left = -233.52
offset_top = -226.5
offset_right = 265.48
offset_bottom = 272.5
grow_horizontal = 2
grow_vertical = 2

[node name="above_panel" type="HBoxContainer" parent="Control/Stats_Chart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.969
anchor_top = 0.297
anchor_right = 0.969
anchor_bottom = 0.297
offset_left = -273.031
offset_top = -204.703
offset_right = 22.969
offset_bottom = -155.703

[node name="Chart_Name" type="Label" parent="Control/Stats_Chart/above_panel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_skg6n")
theme_override_font_sizes/font_size = 18
text = "Performance Chart"

[node name="Zoom" type="HBoxContainer" parent="Control/Stats_Chart/above_panel"]
layout_mode = 2
theme = ExtResource("3_7y7tp")
metadata/_edit_group_ = true

[node name="ZoomIn" type="Button" parent="Control/Stats_Chart/above_panel/Zoom"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "-
"

[node name="ZoomOut" type="Button" parent="Control/Stats_Chart/above_panel/Zoom"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "+"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Stats_Chart"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Stats_Chart/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="UpScrollContainer" type="ScrollContainer" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 450)
layout_mode = 2
horizontal_scroll_mode = 3

[node name="UpNumbers" type="Control" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/UpScrollContainer"]
custom_minimum_size = Vector2(45, 450)
layout_mode = 2

[node name="UpDrawer" type="Node2D" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/UpScrollContainer"]
script = ExtResource("15_s3m1s")

[node name="StatsPanelContainer" type="ScrollContainer" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 450)
layout_mode = 2
vertical_scroll_mode = 3

[node name="Panel" type="Panel" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer"]
custom_minimum_size = Vector2(450, 450)
layout_mode = 2
size_flags_horizontal = 4

[node name="Line2D_All" type="Line2D" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
points = PackedVector2Array(0, 450)
width = 1.5
default_color = Color(0.286507, 0.888196, 0.116652, 1)

[node name="Line2D_Normal" type="Line2D" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
points = PackedVector2Array(0, 450)
width = 1.8
default_color = Color(1, 0.694118, 0.34902, 1)

[node name="Line2D_Hard" type="Line2D" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
points = PackedVector2Array(0, 450)
width = 1.5
default_color = Color(0.811765, 0.156863, 0.156863, 1)

[node name="Points_All" type="Control" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
anchors_preset = 0
offset_right = 450.0
offset_bottom = 450.0

[node name="Points_Normal" type="Control" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
anchors_preset = 0
offset_right = 450.0
offset_bottom = 450.0

[node name="Points_Hard" type="Control" parent="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer/Panel"]
anchors_preset = 0
offset_right = 450.0
offset_bottom = 450.0

[node name="RightScrollContainer" type="ScrollContainer" parent="Control/Stats_Chart/VBoxContainer"]
custom_minimum_size = Vector2(450, 45)
layout_mode = 2
size_flags_horizontal = 8
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="RightNumbers" type="Control" parent="Control/Stats_Chart/VBoxContainer/RightScrollContainer"]
custom_minimum_size = Vector2(450, 45)
layout_mode = 2

[node name="RightDrawer" type="Node2D" parent="Control/Stats_Chart/VBoxContainer/RightScrollContainer"]
script = ExtResource("16_a557n")

[node name="Icon" type="Sprite2D" parent="Control/Stats_Chart/VBoxContainer/RightScrollContainer"]
visible = false
position = Vector2(-45, -705)
scale = Vector2(0.515625, 0.539063)
texture = ExtResource("17_8v1gl")

[node name="Levels" type="Label" parent="Control"]
layout_mode = 2
anchor_left = 0.119
anchor_top = 0.426
anchor_right = 0.119
anchor_bottom = 0.529
offset_left = -64.26
offset_top = 293.04
offset_right = 33.74
offset_bottom = 211.16
rotation = -1.5708
theme_override_fonts/font = ExtResource("8_44pqn")
text = "Levels >>>"

[node name="Game Sessions" type="Label" parent="Control"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
anchor_left = 0.093
anchor_top = 0.571
anchor_right = 0.093
anchor_bottom = 0.571
offset_left = -50.22
offset_top = 187.84
offset_right = 133.72
offset_bottom = 220.053
theme_override_fonts/font = ExtResource("8_44pqn")
text = "Game Sessions >>>"

[node name="Stats_Button" parent="Control" instance=ExtResource("18_t36mh")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 106.0
offset_bottom = 106.0

[node name="BackIcon" type="Sprite2D" parent="Control/Stats_Button"]
position = Vector2(48, 48)
scale = Vector2(3, 3)
texture = ExtResource("19_etagl")

[node name="Icon2" type="Sprite2D" parent="Control"]
visible = false
scale = Vector2(0.515625, 0.539063)
texture = ExtResource("17_8v1gl")

[node name="Interpretation" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.085
anchor_top = 0.683
anchor_right = 0.915
anchor_bottom = 0.987
offset_left = 0.0999985
offset_top = 97.3199
offset_right = -0.100006
offset_bottom = 0.47998
theme = ExtResource("3_7y7tp")
script = ExtResource("20_1xhs7")

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Interpretation"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -6.0
theme_override_fonts/normal_font = ExtResource("5_uc7mg")
theme_override_fonts/bold_font = ExtResource("6_skg6n")
theme_override_fonts/italics_font = ExtResource("7_1jh43")
theme_override_fonts/bold_italics_font = ExtResource("8_44pqn")
theme_override_font_sizes/normal_font_size = 18
theme_override_font_sizes/bold_font_size = 18
bbcode_enabled = true
text = "Interpretation: ..."

[node name="Origin" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.2, 0.2)
texture = ExtResource("17_8v1gl")

[node name="drawer" type="Node2D" parent="."]
script = ExtResource("21_pw1bn")

[node name="Transition_Layer" parent="." instance=ExtResource("22_demm4")]

[connection signal="button_down" from="Control/Games/SodaTiles" to="." method="_on_sequence_mix_button_down"]
[connection signal="button_down" from="Control/Games/Digit Hack" to="." method="_on_digit_hack_button_down"]
[connection signal="button_down" from="Control/Games/Meteor Rush" to="." method="_on_meteor_rush_button_down"]
[connection signal="button_down" from="Control/Difficulty_Info/Difficulty_Filter/AllContainer/All_Visible" to="." method="_on_all_visible_button_down"]
[connection signal="button_down" from="Control/Difficulty_Info/Difficulty_Filter/NormalContainer/Normal_Visible" to="." method="_on_normal_visible_button_down"]
[connection signal="button_down" from="Control/Difficulty_Info/Difficulty_Filter/HardContainer/Hard_Visible" to="." method="_on_hard_visible_button_down"]
[connection signal="button_down" from="Control/Stats_Chart/above_panel/Zoom/ZoomIn" to="." method="_on_zoom_in_button_down"]
[connection signal="button_down" from="Control/Stats_Chart/above_panel/Zoom/ZoomOut" to="." method="_on_zoom_out_button_down"]
[connection signal="scroll_started" from="Control/Stats_Chart/VBoxContainer/HBoxContainer/StatsPanelContainer" to="." method="_on_scroll_container_scroll_started"]
